--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -161,34 +161,79 @@ jobs:
           echo "  - $IMAGE_NAME:v${APP_VERSION}"
           echo "  - $IMAGE_NAME:${CI_TAG}"
 
-     
-                # ====== Commit & push al repo de manifiestos ======
+      # ====== Checkout del repo de manifiestos con TOKEN ======
       - name: Checkout manifests repo (ritatrcr/manifiestos-delivery-app)
         uses: actions/checkout@v4
         with:
           repository: ${{ env.HELM_MANIFESTS_REPO }}
           ref: main
           path: manifests
-          token: ${{ env.PAT_HELMCHART }}
+          token: ${{ secrets.PAT_HELMCHART }}
+          persist-credentials: false
 
+      - name: Verify git remote (manifests)
+        shell: bash
+        run: |
+          set -euxo pipefail
+          cd manifests
+          git remote -v
+
+      # ====== Actualizar values y Chart.yaml, commit & push con PAT ======
       - name: Update values-dev/prod with new Docker tag and (optionally) Chart.yaml version
         shell: bash
         env:
-          GIT_USER: ritatrcr
-          PAT: ${{ env.PAT_HELMCHART }}
+          GIT_USER: ${{ env.GH_USER }}
+          PAT: ${{ secrets.PAT_HELMCHART }}
         run: |
           set -euo pipefail
           cd manifests
 
-          # --- CONFIG REMOTO CON PAT (antes de hacer nada con git) ---
+          # --- CREDENCIALES EN EL REMOTO (ANTES de cualquier fetch/pull/push) ---
           git remote set-url origin "https://${GIT_USER}:${PAT}@github.com/${HELM_MANIFESTS_REPO}.git"
 
           echo "Usando IMAGE_NAME=${IMAGE_NAME}"
-          echo "Usando APP_VERSION=${APP_VERSION}"
-          echo "Usando DOCKER_VERSION=${DOCKER_VERSION}"
+          echo "Usando APP_VERSION=${APP_VERSION}  (Chart.yaml no lleva 'v')"
+          echo "Usando DOCKER_VERSION=${DOCKER_VERSION}  (ej: v0.1.5)"
 
-          # (… tus comandos yq de actualización …)
+          # Función que intenta actualizar app.image.*, backend.image.*, frontend.image.*
+          bump_images () {
+            local file="$1"
+            echo "Actualizando $file"
 
+            # app.image.*
+            yq -i '
+              (.app.image.repository |= env(IMAGE_NAME)) |
+              (.app.image.tag        |= env(DOCKER_VERSION))
+            ' "$file" || true
+
+            # backend.image.* y frontend.image.*
+            yq -i '
+              (.backend.image.repository |= env(IMAGE_NAME)) |
+              (.backend.image.tag        |= env(DOCKER_VERSION)) |
+              (.frontend.image.repository |= env(IMAGE_NAME)) |
+              (.frontend.image.tag        |= env(DOCKER_VERSION))
+            ' "$file" || true
+          }
+
+          # Actualiza values-dev/prod si existen
+          for f in \
+            "${HELM_CHART_DIR}/values-dev.yaml" \
+            "${HELM_CHART_DIR}/values-prod.yaml"
+          do
+            [ -f "$f" ] && bump_images "$f" || echo "Archivo no encontrado (ok): $f"
+          done
+
+          # ====== OPCIONAL: fija la versión del Chart a la versión de la app ======
+          if [ -f "${HELM_CHART_DIR}/Chart.yaml" ]; then
+            echo "Ajustando Chart.yaml version -> ${APP_VERSION}"
+            yq -i ".version = strenv(APP_VERSION)" "${HELM_CHART_DIR}/Chart.yaml"
+            # O con build metadata:
+            # yq -i ".version = \"${APP_VERSION}+${{ github.run_number }}\"" "${HELM_CHART_DIR}/Chart.yaml"
+          else
+            echo "No existe Chart.yaml en ${HELM_CHART_DIR} (no se actualiza versión)."
+          fi
+
+          # Git commit + push
           git config user.name  "github-actions"
           git config user.email "github-actions@github.com"
           git add -A
