--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -34,16 +34,8 @@ jobs:
       - name: Checkout app repo (this)
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-
-      - name: Sync to latest main
-        run: |
-          set -euxo pipefail
-          git fetch origin main
-          git checkout main
-          git pull --ff-only origin main
-          git rev-parse --abbrev-ref HEAD
-          git log --oneline -n 3
+            ref: main
+            fetch-depth: 0
 
       - name: Validate PAT to both repos
         shell: bash
@@ -70,6 +62,15 @@ jobs:
           yq --version
           helm version
 
+      - name: Sync to latest main
+        shell: bash
+        run: |
+          set -euxo pipefail
+          git fetch origin main
+          git checkout main
+          git pull --no-rebase origin main
+          git log -1 --oneline
+
       - name: Assert Node files exist
         shell: bash
         run: |
@@ -91,7 +92,7 @@ jobs:
           git config user.email "github-actions@github.com"
           git add delivery-app/package.json delivery-app/package-lock.json || true
           git commit -m "chore(ci): bump app version $CUR -> $NEW [skip ci]" || true
-          git push origin main || true
+          git push || true
 
       - name: Ensure APP_VERSION in env
         shell: bash
@@ -120,7 +121,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: docker.io
-          username: ${{ env.DOCHERHUB_USERNAME }} # typo intencional? corregimos
+          username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ env.DOCKERHUB_TOKEN }}
 
       - name: Verify Docker login
@@ -149,8 +150,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: |
             ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:v{{ env.APP_VERSION }}
-            ${{ env.IMAGE_NAME }}:{{ env.APP_VERSION }}-${{ github.sha }}
+            ${{ env.IMAGE_NAME }}:v${{ env.APP_VERSION }}
+            ${{ env.IMAGE_NAME }}:${{ env.APP_VERSION }}-${{ github.sha }}
           labels: |
             org.opencontainers.image.source=${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
